--- a/layout/user/style.css
+++ b/layout/user/style.css
@@ -22,7 +22,7 @@
 #MainPage{
     background-color: rgb(244, 187, 255);
 }
-#AdminPage{
+#AdminPage, #CreatePage{
     background-color: rgb(105, 27, 121);
 }
 #LoginPage, #RegisterPage{
